# na_visualization

./: .dockerignore  .env  .eslintrc.js  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SESSION_CHANGES.md  asset-manifest.json  docker-compose.yml  gatsby-config.js  index.html  manifest.json  package-lock.json  package.json
backend/: app.py  linear_interpolation.py  main.py  playground.ipynb  pyproject.toml  wavy_interpolation.py
backend/.ipynb_checkpoints/: test-checkpoint.ipynb
frontend/: package.json
frontend/public/: index.html  init.py  main.py  test.py
frontend/src/: PositionLabel.js  functionalPointSetter.js  index.js  pointSetter.js  tmp.js
interpolation/: init.py
public/: index.html  main.py
public/python/: init.py  parse_pivotal_position.py
python/: index.html  init.py  linear_interpolation.py  main.py  numpy_tools.py  parse_plot_position.py  pyproject.toml
python/executions/: cubic_spline.py  fifth_spline.py  fourth_spline.py  lagrange.py  linear.py  quad_spline.py  wavy.py
src/: Hook.js  constant.js  constant.ts  constants.js  index.css  index.js  index.tsx  pointSetter.js  styles.css
src/__tests__/: App.test.tsx
src/canvas/: cronCanvas.jsx  pointCanvas.css  pointCanvas.jsx  pointCanvas.tsx
src/components/: InputBox.js  ModernInputGroup.css  ModernInputGroup.tsx  ModernSelect.css  ModernSelect.tsx  ModernToggle.css  ModernToggle.tsx  floatingPoint.js  multipleInputBox.css  multipleInputBox.js  selectBox.js  toggleSwitch.css  toggleSwitch.js
src/drawing/: animatedCircle.js  drawFunctionPoints.js  (+2 more)
(+88 files in other folders)
