[tool.poetry]
name = "backend"
version = "0.1.0"
description = "na_visualization backend written in python"
authors = ["Soheun YI <soheun@hyperithm.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.7.0"
numpy = "^1.20.1"
argparse = "^1.4.0"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
